--- a/src/app/pages/reset-password/reset-password.component.html
+++ b/src/app/pages/reset-password/reset-password.component.html
@@ -1,42 +1,70 @@
 <!-- <app-breadcrumb [title]="'Reset Password'" [breadcrumb]="'Reset Password'"></app-breadcrumb> -->
 <!-- section start -->
-<section class="pwd-page">
+<section class="register-page section-b-space">
     <div class="container">
         <div class="row">
-            <div class="col-lg-6 offset-lg-3">
-                <h2>Reset Password</h2>
-                <form class="theme-form">
-                    <div class="form-row">
-                        <div class="form-row">
-                            <div class="form-group col-md-6 col-sm-6 col-xs-6">
-                                <div class="field-label">New Password <span style="color:red">*</span></div>
-                                <input type="password" class="form-control" name="NewPassword" [formControl]="ChangePwdForm.controls['NewPassword']" value="" placeholder="" autocomplete="off">
-                                <div *ngIf="(ChangePwdForm.controls.NewPassword.touched || Submitted) && ChangePwdForm.controls.NewPassword.errors?.required" class="text text-danger">
-                                    New Password is required.
-                                </div>
-                                <div *ngIf="(ChangePwdForm.controls.NewPassword.touched || Submitted) && ChangePwdForm.controls.NewPassword.errors?.minlength" class="text text-danger">
-                                    New Password must be greater than 7 character.
+            <div class="col-md-6 offset-md-3 mb-5">
+                <div class="theme-card">
+                    <h4 class="mb-5">Reset Password</h4>
+                    <form class="theme-form" [formGroup]="ChangePwdForm">
+                        <!-- <div class="form-row"> -->
+                        <!-- <div class="form-row"> -->
+                        <div class="form-group">
+
+                            <label for="email">New Password</label><span style="color:red">*</span>
+                            <div class="input-group">
+                                <input type="{{inputType}}" class="form-control" maxlength="20"
+                                    [ngClass]="{ 'is-invalid': ChangePwdForm.controls.NewPassword.errors }"
+                                    [formControl]="ChangePwdForm.controls['NewPassword']" value="" autocomplete="off">
+                                <div class="input-group-append frm-icon" (click)="hideShowPassword()">
+                                    <span class="input-group-text">
+                                        <i class="{{class}}"></i>
+                                    </span>
                                 </div>
                             </div>
-                            <div class="form-group col-md-6 col-sm-6 col-xs-6">
-                                <div class="field-label">Confirm Password <span style="color:red">*</span></div>
-                                <input type="password" class="form-control" name="ConfirmPwd" [formControl]="ChangePwdForm.controls['ConfirmPwd']" value="" placeholder="" autocomplete="off">
-                                <div *ngIf="(ChangePwdForm.controls.ConfirmPwd.touched || Submitted) && ChangePwdForm.controls.ConfirmPwd.errors?.required" class="text text-danger">
-                                    Confirm Password is required.
-                                </div>
-                                <div *ngIf="(ChangePwdForm.controls.ConfirmPwd.touched || Submitted) && ChangePwdForm.controls.ConfirmPwd.errors?.minlength" class="text text-danger">
-                                    Confirm Password must be greater than 7 character.
-                                </div>
-                                <div *ngIf="(ChangePwdForm.controls.ConfirmPwd.touched || Submitted) && (ChangePwdForm.controls.NewPassword.value != ChangePwdForm.controls.ConfirmPwd.value)" class="text text-danger">
-                                    New Password must be same Confirm password.
-                                </div>
+                            <div *ngIf="(ChangePwdForm.controls.NewPassword.touched || Submitted) && ChangePwdForm.controls.NewPassword.errors?.required"
+                                class="text text-danger">
+                                New Password is required
+                            </div>
+                            <div *ngIf="(ChangePwdForm.controls.NewPassword.touched || Submitted) && ChangePwdForm.controls.NewPassword.errors?.minlength"
+                                class="text text-danger">
+                                New Password must be greater than 7 character
                             </div>
                         </div>
+                        <div class="form-group">
+                            <label for="email">Confirm Password </label><span style="color:red">*</span>
+                            <div class="input-group">
+                                <input type="{{inputTypeConfirm}}" class="form-control" name="ConfirmPwd" maxlength="20"
+                                    [ngClass]="{ 'is-invalid': ChangePwdForm.controls.ConfirmPwd.errors }"
+                                    [formControl]="ChangePwdForm.controls['ConfirmPwd']" autocomplete="off">
+
+                                <div class="input-group-append frm-icon" (click)="hideShowConfirmPassword()">
+                                    <span class="input-group-text">
+                                        <i class="{{classConfirm}}"></i>
+                                    </span>
+                                </div>
+                            </div>
+                            <div *ngIf="(ChangePwdForm.controls.ConfirmPwd.touched || Submitted) && ChangePwdForm.controls.ConfirmPwd.errors?.required"
+                                class="text text-danger">
+                                Confirm Password is required
+                            </div>
+                            <div *ngIf="(ChangePwdForm.controls.ConfirmPwd.touched || Submitted) && ChangePwdForm.controls.ConfirmPwd.errors?.minlength"
+                                class="text text-danger">
+                                Confirm Password must be greater than 7 character
+                            </div>
+                            <div *ngIf="(ChangePwdForm.controls.ConfirmPwd.touched || Submitted) && (ChangePwdForm.controls.NewPassword.value != ChangePwdForm.controls.ConfirmPwd.value)"
+                                class="text text-danger">
+                                New Password and Confirm password must be same
+                            </div>
+                        </div>
+                        <!-- </div> -->
                         <p>
-                            <button style="margin-top: 23px;" class="btn btn-solid" (click)="ResetPassword()">Submit</button>
+                            <button style="margin-top: 23px;" class="btn btn-solid"
+                                (click)="ResetPassword()">Submit</button>
                         </p>
-                    </div>
-                </form>
+                        <!-- </div> -->
+                    </form>
+                </div>
             </div>
         </div>
     </div>
